--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
 
       # Create GitHub Release from tag
       - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/v') || success()
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
