--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,6 @@ jobs:
         if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
         run: |
           # Optional: Extract version from PR title or body
-          # For example, if your PR title contains [release v0.0.4]
           VERSION=$(echo "${{ github.event.pull_request.title }}" | grep -oP '\[release v\d+\.\d+\.\d+\]' | grep -oP 'v\d+\.\d+\.\d+')
           
           # If no version in PR title, increment patch version
@@ -53,11 +52,12 @@ jobs:
           git tag -a $VERSION -m "Release $VERSION from PR #${{ github.event.pull_request.number }}"
           git push origin $VERSION
 
-      # Create GitHub Release from tag
-      - name: Create GitHub Release
+      # Run GoReleaser
+      - name: Run GoReleaser
         if: startsWith(github.ref, 'refs/tags/v')
-        uses: softprops/action-gh-release@v1
+        uses: goreleaser/goreleaser-action@v5
         with:
-          generate_release_notes: true
-          draft: false
-          prerelease: ${{ contains(github.ref, '-rc') || contains(github.ref, '-beta') || contains(github.ref, '-alpha') }}
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
