--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
     if: (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) || 
         (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
     runs-on: ubuntu-latest
-    needs: ['lint', 'test']
+    needs: ['test']  # Remove this line if you want to run independently, or properly specify the jobs this depends on
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
